rss channel tags content moved to config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,3 +3,13 @@ disqus {
 }
 
 scalalazUrl =  "http://scalalaz.ru"
+
+rss {
+  channel{
+    title = "Scalalaz Podcast"
+    description = "Подкаст о программировании на языке Scala (16+)"
+    link = "http://scalalaz.ru"
+    language = "ru-RU"
+  }
+}
+
