--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,37 @@
 language: scala
 
 scala:
-    - 2.11.8
+  - 2.11.8
 
 jdk:
-    - oraclejdk8
+  - oraclejdk8
+
+before_cache:
+  # Tricks to avoid unnecessary cache updates
+  - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
+  - find $HOME/.sbt -name "*.lock" -delete
+
+cache:
+  directories:
+    - $HOME/.ivy2
+    - $HOME/.sbt
 
 script:
-    - sbt -no-colors -J-Xss2m ++$TRAVIS_SCALA_VERSION test
-    - sbt -no-colors -J-Xss2m ++$TRAVIS_SCALA_VERSION run
+  - sbt -no-colors -J-Xss2m ++$TRAVIS_SCALA_VERSION test
+  - sbt -no-colors -J-Xss2m ++$TRAVIS_SCALA_VERSION run
 
 addons:
-    ssh_known_hosts: scalalaz.ru
+  ssh_known_hosts: scalalaz.ru
 
 before_deploy:
-    - openssl aes-256-cbc -K $encrypted_a3371a76d3e2_key -iv $encrypted_a3371a76d3e2_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
-    - eval "$(ssh-agent -s)"
-    - chmod 600 /tmp/deploy_rsa
-    - ssh-add /tmp/deploy_rsa
+  - openssl aes-256-cbc -K $encrypted_a3371a76d3e2_key -iv $encrypted_a3371a76d3e2_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+  - eval "$(ssh-agent -s)"
+  - chmod 600 /tmp/deploy_rsa
+  - ssh-add /tmp/deploy_rsa
 
 deploy:
-    - provider: script
-    - skip_cleanup: true
-    - script: deploy/deploy.sh
-    - on:
-        branch: master
+  - provider: script
+  - skip_cleanup: true
+  - script: deploy/deploy.sh
+  - on:
+      branch: master
