travis - try fix deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,8 @@ before_deploy:
   - ssh-add /tmp/deploy_rsa
 
 deploy:
-  - provider: script
-  - skip_cleanup: true
-  - script: deploy/deploy.sh
-  - on:
-      branch: master
+  provider: script
+  skip_cleanup: true
+  script: deploy/deploy.sh
+  on:
+    branch: master
