--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ addons:
   ssh_known_hosts: scalalaz.ru
 
 before_deploy:
-  - openssl aes-256-cbc -K $encrypted_a3371a76d3e2_key -iv $encrypted_a3371a76d3e2_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+  - openssl aes-256-cbc -K $encrypted_a3371a76d3e2_key -iv $encrypted_a3371a76d3e2_iv -in deploy/rsa.enc -out /tmp/deploy_rsa -d
   - eval "$(ssh-agent -s)"
   - chmod 600 /tmp/deploy_rsa
   - ssh-add /tmp/deploy_rsa
