--- a/.travis.yml
+++ b/.travis.yml
@@ -23,15 +23,15 @@ script:
 addons:
   ssh_known_hosts: scalalaz.ru
 
-before_deploy:
-  - openssl aes-256-cbc -K $encrypted_a3371a76d3e2_key -iv $encrypted_a3371a76d3e2_iv -in deploy/rsa.enc -out /tmp/deploy_rsa -d
-  - eval "$(ssh-agent -s)"
-  - chmod 600 /tmp/deploy_rsa
-  - ssh-add /tmp/deploy_rsa
-
-deploy:
-  provider: script
-  skip_cleanup: true
-  script: deploy/deploy.sh
-  on:
-    branch: master
+#before_deploy:
+#  - openssl aes-256-cbc -K $encrypted_a3371a76d3e2_key -iv $encrypted_a3371a76d3e2_iv -in deploy/rsa.enc -out /tmp/deploy_rsa -d
+#  - eval "$(ssh-agent -s)"
+#  - chmod 600 /tmp/deploy_rsa
+#  - ssh-add /tmp/deploy_rsa
+#
+#deploy:
+#  provider: script
+#  skip_cleanup: true
+#  script: deploy/deploy.sh
+#  on:
+#    branch: master
