--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,13 @@ before_cache:
   # Tricks to avoid unnecessary cache updates
   - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
   - find $HOME/.sbt -name "*.lock" -delete
+  - find $HOME/.coursier/cache -name "*.lock" -type f -delete
 
 cache:
   directories:
     - $HOME/.ivy2
     - $HOME/.sbt
+    - $HOME/.coursier
 
 script:
   - sbt -no-colors -J-Xss2m ++$TRAVIS_SCALA_VERSION test
