--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,5 +3,6 @@ vscode:
   extensions:
     - scala-lang.scala@0.3.9:kklqw+c/dNRmtTU8B5repw==
     - scalameta.metals@1.9.0:PtE/gdeE1YPL6It4tEfqpg==
+tasks:
 - init: source ./gitpod_init.sh
 - command: source ./gitpod_command.sh
