--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,13 +2,13 @@ disqus {
   disqusCode = "scalalaz-ru"
 }
 
-scalalazUrl =  "http://scalalaz.ru"
+scalalazUrl =  "https://scalalaz.ru"
 
 rss {
   channel{
     title = "Scalalaz Podcast"
     description = "Подкаст о программировании на языке Scala (16+)"
-    link = "http://scalalaz.ru"
+    link = "https://scalalaz.ru"
     language = "ru-RU"
   }
 }
