--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,21 @@ jobs:
     - name: Build and test
       run: sbt ";test ;run"
 
+    - uses: actions/upload-artifact@v2
+      with:
+        name: site
+        path: target/site
+
   deploy:
     # if: github.ref == 'refs/heads/master'
     needs: [build]
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/download-artifact@v2
+      with:
+        name: site
+        path: target/site
+
     - uses: burnett01/rsync-deployments@4.1
       env:
         DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
