Finalize CI migration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         path: target/site
 
   deploy:
-    # if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master' && github.event_name != 'pull_request'
     needs: [build]
     runs-on: ubuntu-latest
     steps:
