--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: coursier/cache-action@v6
-    - name: Set up Scala
-      uses: olafurpg/setup-scala@v11
+    - uses: actions/setup-java@v2
       with:
-          java-version: adopt@1.11
+        distribution: temurin
+        java-version: 11
 
     - name: Build and test
       run: sbt ";test ;run"
