--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,5 @@
 version = 3.1.1
-runner.dialect = scala213
+runner.dialect = scala213source3
 indent.main = 2
 indent.significant = 2
 maxColumn = 150
@@ -8,3 +8,4 @@ assumeStandardLibraryStripMargin = true
 danglingParentheses.preset = true
 rewrite.rules = [SortImports, RedundantBraces, RedundantParens, SortModifiers]
 docstrings.style = Asterisk
+align.preset = more
